[gd_scene load_steps=32 format=3 uid="uid://fmb4b3bc5wo4"]

[ext_resource type="Script" path="res://Hero/Hero.gd" id="1_3mj70"]
[ext_resource type="Texture2D" uid="uid://bf43pevntu6xc" path="res://Hero/Hero.png" id="1_xk5an"]
[ext_resource type="Resource" uid="uid://doeticvoapt47" path="res://Hero/HeroStats.tres" id="2_ulgu6"]
[ext_resource type="Script" path="res://States/StateMachine.gd" id="3_thlpy"]
[ext_resource type="Script" path="res://Hero/FlipSprite.gd" id="4_bigcf"]
[ext_resource type="Script" path="res://States/RunState.gd" id="5_a6lm4"]
[ext_resource type="Script" path="res://States/GroundState.gd" id="5_togkl"]
[ext_resource type="Script" path="res://States/State.gd" id="6_a1yu6"]
[ext_resource type="Script" path="res://States/AirState.gd" id="9_72ong"]
[ext_resource type="Script" path="res://States/FallState.gd" id="10_e4sw5"]
[ext_resource type="Script" path="res://States/JumpState.gd" id="11_684q0"]
[ext_resource type="Script" path="res://States/FringeState.gd" id="12_7b8n6"]
[ext_resource type="Script" path="res://Hero/LedgeDetector.gd" id="12_541cb"]
[ext_resource type="Script" path="res://Hero/LedgeGrab.gd" id="13_jh8yt"]
[ext_resource type="Texture2D" uid="uid://d04dad3rgrd4f" path="res://icon.svg" id="13_ueqv6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qvwf"]
size = Vector2(6, 11)

[sub_resource type="Animation" id="Animation_2d14p"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(7936, 0, 128, 64), Rect2(8064, 0, 128, 64), Rect2(8192, 0, 128, 64), Rect2(8320, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_e8v1q"]
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(7040, 0, 128, 64), Rect2(7168, 0, 128, 64), Rect2(7296, 0, 128, 64), Rect2(7424, 0, 128, 64), Rect2(7552, 0, 128, 64), Rect2(7680, 0, 128, 64), Rect2(7808, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_ua2wd"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(8448, 0, 128, 64), Rect2(8576, 0, 128, 64), Rect2(8704, 0, 128, 64), Rect2(8832, 0, 128, 64), Rect2(8960, 0, 128, 64), Rect2(9088, 0, 128, 64), Rect2(9216, 0, 128, 64), Rect2(9344, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_75t7j"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(6528, 0, 128, 64), Rect2(6656, 0, 128, 64), Rect2(6784, 0, 128, 64), Rect2(6912, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_bv1su"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(4864, 0, 128, 64), Rect2(4992, 0, 128, 64), Rect2(5120, 0, 128, 64), Rect2(5248, 0, 128, 64), Rect2(5376, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_ktfeu"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_e1jr1"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(5504, 0, 128, 64), Rect2(5632, 0, 128, 64), Rect2(5760, 0, 128, 64), Rect2(5888, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_8ee51"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(6016, 0, 128, 64), Rect2(6144, 0, 128, 64), Rect2(6272, 0, 128, 64), Rect2(6400, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_jlgmr"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(4096, 0, 128, 64), Rect2(4224, 0, 128, 64), Rect2(4352, 0, 128, 64), Rect2(4480, 0, 128, 64), Rect2(4608, 0, 128, 64), Rect2(4736, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_wj7oq"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(1920, 0, 128, 64), Rect2(2048, 0, 128, 64), Rect2(2176, 0, 128, 64), Rect2(2304, 0, 128, 64), Rect2(2432, 0, 128, 64), Rect2(2560, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_f8ho2"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(2688, 0, 128, 64), Rect2(2816, 0, 128, 64), Rect2(2944, 0, 128, 64), Rect2(3072, 0, 128, 64), Rect2(3200, 0, 128, 64), Rect2(3328, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_bsoor"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(3456, 0, 128, 64), Rect2(3584, 0, 128, 64), Rect2(3712, 0, 128, 64), Rect2(3840, 0, 128, 64), Rect2(3968, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="Animation" id="Animation_1sfuf"]
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(128, 0, 128, 64), Rect2(256, 0, 128, 64), Rect2(384, 0, 128, 64), Rect2(512, 0, 128, 64), Rect2(640, 0, 128, 64), Rect2(768, 0, 128, 64), Rect2(896, 0, 128, 64), Rect2(1024, 0, 128, 64), Rect2(1152, 0, 128, 64), Rect2(1280, 0, 128, 64), Rect2(1408, 0, 128, 64), Rect2(1536, 0, 128, 64), Rect2(1664, 0, 128, 64), Rect2(1792, 0, 128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16), Vector2(10, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nvmpb"]
_data = {
"Damaged": SubResource("Animation_2d14p"),
"Dash Teleport": SubResource("Animation_e8v1q"),
"Death": SubResource("Animation_ua2wd"),
"Fall": SubResource("Animation_75t7j"),
"Hop": SubResource("Animation_bv1su"),
"Idle": SubResource("Animation_ktfeu"),
"Jet Pack": SubResource("Animation_e1jr1"),
"Jet Stop": SubResource("Animation_8ee51"),
"Run": SubResource("Animation_jlgmr"),
"Strike 1": SubResource("Animation_wj7oq"),
"Strike 2": SubResource("Animation_f8ho2"),
"Strike 3": SubResource("Animation_bsoor"),
"Super Attack": SubResource("Animation_1sfuf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ui30q"]
radius = 1.41421

[node name="Hero" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_3mj70")
stats = ExtResource("2_ulgu6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_7qvwf")

[node name="Sprite" type="Sprite2D" parent="." node_paths=PackedStringArray("core")]
unique_name_in_owner = true
texture = ExtResource("1_xk5an")
offset = Vector2(10, -16)
region_enabled = true
region_rect = Rect2(0, 0, 128, 64)
script = ExtResource("4_bigcf")
core = NodePath("..")

[node name="Animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_nvmpb")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("core")]
unique_name_in_owner = true
script = ExtResource("3_thlpy")
core = NodePath("..")

[node name="Ground" type="Node" parent="StateMachine"]
script = ExtResource("5_togkl")

[node name="Idle" type="Node" parent="StateMachine/Ground"]
script = ExtResource("6_a1yu6")
anim = "Idle"

[node name="Run" type="Node" parent="StateMachine/Ground"]
script = ExtResource("5_a6lm4")
anim = "Run"

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource("9_72ong")

[node name="Fall" type="Node" parent="StateMachine/Air"]
script = ExtResource("10_e4sw5")
looping_fall_anim = "Fall"
anim = "Jet Stop"

[node name="Jump" type="Node" parent="StateMachine/Air"]
script = ExtResource("11_684q0")
anim = "Jet Pack"

[node name="Fringe" type="Node" parent="StateMachine"]
script = ExtResource("12_7b8n6")

[node name="LedgeGrab" type="Node" parent="StateMachine/Fringe"]
script = ExtResource("13_jh8yt")
anim = "Idle"

[node name="LedgeDetector" type="Node2D" parent="." node_paths=PackedStringArray("core")]
position = Vector2(7, -6)
script = ExtResource("12_541cb")
core = NodePath("..")

[node name="HighChecker" type="Area2D" parent="LedgeDetector"]
position = Vector2(0, -8)
collision_layer = 0

[node name="Sprite2D" type="Sprite2D" parent="LedgeDetector/HighChecker"]
modulate = Color(1, 1, 1, 0.701961)
scale = Vector2(0.032, 0.032)
texture = ExtResource("13_ueqv6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LedgeDetector/HighChecker"]
shape = SubResource("CircleShape2D_ui30q")

[node name="LowChecker" type="Area2D" parent="LedgeDetector"]
collision_layer = 0

[node name="Sprite2D" type="Sprite2D" parent="LedgeDetector/LowChecker"]
modulate = Color(1, 1, 1, 0.701961)
scale = Vector2(0.032, 0.032)
texture = ExtResource("13_ueqv6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LedgeDetector/LowChecker"]
shape = SubResource("CircleShape2D_ui30q")

[connection signal="reached_grabbable_ledge" from="LedgeDetector" to="." method="_on_reached_grabbable_ledge"]
[connection signal="body_entered" from="LedgeDetector/HighChecker" to="LedgeDetector" method="_on_checker_body_entered" binds= [true]]
[connection signal="body_exited" from="LedgeDetector/HighChecker" to="LedgeDetector" method="_on_checker_body_exited" binds= [true]]
[connection signal="body_entered" from="LedgeDetector/LowChecker" to="LedgeDetector" method="_on_checker_body_entered" binds= [false]]
[connection signal="body_exited" from="LedgeDetector/LowChecker" to="LedgeDetector" method="_on_checker_body_exited" binds= [false]]
